--- a/portal/templates/gil/decision-support.html
+++ b/portal/templates/gil/decision-support.html
@@ -11,7 +11,7 @@
           </div>
         </div>
       </div>
-      <div class="module-wrap module-wrap--watch js-video-toggle" data-iframe-src="//videos.sproutvideo.com/embed/e89bd1bd181ae4cf60/1e7fa0493e528f7c?type=hd&amp;playerColor=2f3437&amp;autoPlay=true"><img src="{{url_for('static', filename='img/DS-Video-Export.jpg') }}">
+      <div class="module-wrap module-wrap--watch js-video-toggle" data-iframe-src="//videos.sproutvideo.com/embed/4c9ad9b61815eec5c4/882f75be6c8c66da?type=hd&amp;autoPlay=true"><img src="{{url_for('static', filename='img/DS-Video-Export.jpg') }}">
         <div class="module-wrap--inner">
           <div class="button-callout"><a class="button button--large button--teal" href="#">Watch</a></div>
         </div>
