--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1852,3 +1852,89 @@ fieldset[disabled] .btn-google.active {
   color: #dd4b39;
   background-color: #fff;
 }
+.btn-social-container {
+  width: 400px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+#socialMediaRegistrationContainer .btn-social, #regForm input[type="submit"]  {
+    margin: 0.2em auto;
+    display: inline-block;
+    width: 400px;
+    max-width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    height: 62px;
+    font-size: 17px;
+    line-height: 1;
+    margin: 0 auto;
+    letter-spacing: 3px;
+    border-radius: 0px;
+    padding: 1.2em 2em 1em 4em;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+#socialMediaRegistrationContainer .btn-social > :first-child {
+  width: 40px;
+  top: 0.4em;
+}
+
+#socialMediaRegistrationContainer .divider {
+  height: 0.5em;
+}
+
+#regForm input {
+  background: #f1f0ef;
+  height: 44px;
+  padding: 5px;
+  border: 1px solid #f1f0ef;
+  border-radius: 0;
+  width: 400px;
+  max-width: 100%;
+}
+
+#regForm input[type="submit"] {
+   background-color: #7C959E;
+   text-align: center;
+   padding: 1.2em 2em 1em 2em;
+}
+.reg-title {
+  font-size: 1.4em;
+  line-height: 33px;
+  color: #4B5E6F;
+  position: relative;
+  padding: 0.6em 0 20px;
+  font-weight: bold;
+}
+
+div.or {
+    background: #aeb4b9;
+    border-radius: 12px;
+    color: #fff;
+    font-size: 9px;
+    font-weight: bold;
+    height: 25px;
+    line-height: 27px;
+    text-align: center;
+    text-transform: uppercase;
+    width: 25px;
+    margin: 1em auto;
+    position: relative;
+    z-index: 1;
+}
+.or-divider {
+    height: 1px;
+    background: #ebebeb;
+    position: relative;
+    margin: -1.3em auto 20px auto;
+    width: 100%;
+}
+@media (max-width: 640px) {
+  #regForm input, #socialMediaRegistrationContainer .btn-social, #regForm input[type="submit"] {
+    font-size: 0.9em;
+  }
+  #socialMediaRegistrationContainer .btn-social {
+    padding-top: 2em;
+  }
+}
