--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1891,3 +1891,97 @@ div.org-container input[type="checkbox"] {
 .btn-google:active,.btn-google.active,.open>.dropdown-toggle.btn-google{background-image:none}
 .btn-google.disabled,.btn-google[disabled],fieldset[disabled] .btn-google,.btn-google.disabled:hover,.btn-google[disabled]:hover,fieldset[disabled] .btn-google:hover,.btn-google.disabled:focus,.btn-google[disabled]:focus,fieldset[disabled] .btn-google:focus,.btn-google.disabled:active,.btn-google[disabled]:active,fieldset[disabled] .btn-google:active,.btn-google.disabled.active,.btn-google[disabled].active,fieldset[disabled] .btn-google.active{background-color:#dd4b39;border-color:rgba(0,0,0,0.2)}
 .btn-google .badge{color:#dd4b39;background-color:#fff}
+
+#createAcctTxt {
+  margin: 0.5em 0;
+}
+.btn-social-container {
+  width: 400px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+#socialMediaRegistrationContainer .btn-social, #regForm input[type="submit"]  {
+    margin: 0.2em auto;
+    display: inline-block;
+    width: 400px;
+    max-width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    height: 62px;
+    font-size: 17px;
+    line-height: 1;
+    margin: 0 auto;
+    letter-spacing: 3px;
+    border-radius: 0px;
+    padding: 1.2em 2em 1em 4em;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+#socialMediaRegistrationContainer .btn-social > :first-child {
+  width: 40px;
+  top: 0.4em;
+}
+
+#socialMediaRegistrationContainer .divider {
+  height: 0.5em;
+}
+
+#regForm input {
+  background: #f1f0ef;
+  height: 44px;
+  padding: 5px;
+  border: 1px solid #f1f0ef;
+  border-radius: 0;
+  width: 400px;
+  max-width: 100%;
+}
+
+#regForm input[type="submit"] {
+   background-color: #79815d;
+   text-align: center;
+   padding: 1.2em 2em 1em 2em;
+}
+.reg-title {
+  font-size: 1.4em;
+  line-height: 33px;
+  color: #494a45;
+  position: relative;
+  padding: 0.6em 0 20px;
+  margin: 1.5em 0 25px;
+  font-weight: bold;
+}
+
+div.or {
+    display: none;
+    background: #aeb4b9;
+    border-radius: 12px;
+    color: #fff;
+    font-size: 9px;
+    font-weight: bold;
+    height: 25px;
+    line-height: 27px;
+    text-align: center;
+    text-transform: uppercase;
+    width: 25px;
+    margin: 1em auto;
+    position: relative;
+    z-index: 1;
+}
+.or-divider {
+    display: none;
+    height: 1px;
+    background: #ebebeb;
+    position: relative;
+    margin: -1.3em auto 20px auto;
+    width: 100%;
+}
+
+@media (max-width: 640px) {
+  #regForm input, #socialMediaRegistrationContainer .btn-social, #regForm input[type="submit"] {
+    font-size: 0.9em;
+  }
+  #socialMediaRegistrationContainer .btn-social {
+    padding-top: 2em;
+  }
+}
