various front-end orgs related fixes including fixing orgs for patient, GIL access code validation fixes, css fixes and bug fixes

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -733,10 +733,25 @@ a.btn {
 #fillOrgs,
 .noOrg-container {
   font-size: 0.95em;
+  margin-top: 0.2em;
 }
-
 input.clinic {
   margin-top: 6px;
+}
+#fillOrgs label.org-label input[type="radio"] {
+  position: relative;
+  right: 5px !important;
+  top: -1px !important;
+}
+div.noOrg-container input[type="radio"]
+{
+  font-size:0.95em;
+  top: 2px;
+}
+div.noOrg-container span {
+  margin-left:5px;
+  position: relative;
+  top: 1px;
 }
 #createProfileForm .title {
   margin-top: 5%;
