--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -793,10 +793,27 @@ a.btn {
 
 #fillOrgs, .noOrg-container{
   font-size: @orgSize;
+  margin-top: 0.2em;
 }
 
 input.clinic {
-  margin-top:6px;
+  margin-top: 6px;
+}
+#fillOrgs label.org-label input[type="radio"] {
+  position: relative;
+  right: 5px !important;
+  top: -1px !important;
+}
+div.noOrg-container {
+  input[type="radio"] {
+  font-size:0.95em;
+  top: 2px;
+  }
+  span {
+  margin-left:5px;
+  position: relative;
+  top: 1px;
+  }
 }
 
 #createProfileForm  .title {
@@ -806,7 +823,7 @@ input.clinic {
   margin-top: 0.5em;
 }
 #createProfileForm #studyId {
-  width:350px; 
+  width:350px;
   max-width: 100%;
 }
 #createProfileForm .btn-tnth-back {
@@ -817,7 +834,7 @@ input.clinic {
   margin-top: 0.3em;
 }
 #noEmail {
-  position:relative; 
+  position:relative;
   top:-1px
 }
 
