--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -7180,7 +7180,7 @@ a.home--modal-link {
     /*background-color: #7c959e;*/
     opacity: 0.7;
     border-radius: 30px;
-    color: #516167;
+    color: #3d494e;
 }
 .box-modal-or__divider {
     height: 1px;
