--- a/portal/templates/gil/symptom-tracker.html
+++ b/portal/templates/gil/symptom-tracker.html
@@ -33,7 +33,7 @@
                   <use xlink:href="#ST-Graph"></use>
                 </svg>
               </div>
-              <div class="icon-box-wrap__main__right"><a class="icon-box__button icon-box__button--main symptom-tracker-link" href="{{PORTAL}}/{%if user%}home{%else%}go{%endif%}"><span>Start<figure></figure></span></a></div>
+              <div class="icon-box-wrap__main__right"><a class="icon-box__button icon-box__button--main symptom-tracker-link {% if not user %}icon-box__button--disabled{% endif %}" href="{{PORTAL}}{%if user%}/home{%else%}/{%endif%}"><span>Start<figure></figure></span></a></div>
             </div>
           </div>
         </div>
